--- a/DockerFile
+++ b/DockerFile
@@ -57,6 +57,7 @@ RUN set -x \
 		USE_OPENSSL=1 \
 		USE_PCRE=1 PCREDIR= \
 		USE_ZLIB=1 \
+		USE_LINUX_TPROXY=1 \
 	' \
 	&& make -C /usr/src/haproxy -j "$(getconf _NPROCESSORS_ONLN)" all $makeOpts \
 	&& make -C /usr/src/haproxy install-bin $makeOpts \
