fail2ban tweaks

--- a/fail2ban/filter.d/newbans.conf
+++ b/fail2ban/filter.d/newbans.conf
@@ -8,8 +8,8 @@ before = common.conf
 
 _daemon = newbans
 
-failregex = ^%(__prefix_line)sHOST <HOST> PORT \d+$
-            ^(<\d+>)%(__prefix_line)sHOST <HOST> PORT \d+$
+failregex = ^%(__prefix_line) HOST <HOST> PORT \d+$
+            ^(<\d+>)%(__prefix_line) HOST <HOST> PORT \d+$
 
 
 ignoreregex =
