--- a/fail2ban/filter.d/newbans.conf
+++ b/fail2ban/filter.d/newbans.conf
@@ -8,10 +8,7 @@ before = common.conf
 
 _daemon = newbans
 
-failregex = ^%(__prefix_line) HOST <HOST> PORT \d+$
-            ^(<\d+>)%(__prefix_line) HOST <HOST> PORT \d+$
+failregex = ^.* HOST <HOST> PORT .*$
 
 
 ignoreregex =
-
-
