final changes, but abandoned

--- a/fail2ban/action.d/iptables-multiport-custom.conf
+++ b/fail2ban/action.d/iptables-multiport-custom.conf
@@ -39,7 +39,7 @@ actioncheck = <iptables> -n -L <chain> | grep -q 'f2b-<name>[ \t]'
 # Values:  CMD
 #
 actionban = <iptables> -I f2b-<name> 1 -s <ip> -j <blocktype>
-          logger -s -i "HOST <ip> PORT <port>" 2>> /config/log/fail2ban/newbans.log
+          logger -s "$(date '+%%Y-%%m-%%d %%H:%%M:%%S') -- HOST <ip> PORT <port>" 2>> /config/log/fail2ban/newbans.log
 
 # Option:  actionunban
 # Notes.:  command executed when unbanning an IP. Take care that the
