--- a/fail2ban/filter.d/newbans.conf
+++ b/fail2ban/filter.d/newbans.conf
@@ -8,7 +8,7 @@ before = common.conf
 
 _daemon = newbans
 
-failregex = ^.* HOST <HOST> PORT .*$
-
+# failregex = ^.* HOST <HOST> PORT .*$
+failregex = ^.*[.*].* Ban <HOST>
 
 ignoreregex =
